# destool

./: CMakeLists.txt  LICENSE  README.md  build.sh
cmake/: FindTBB.cmake
src/core/: alex_base.h  alex_nodes.h  concurrency.h  desto.h  desto_base.h  leaf_base.h  lial.h  lial_base.h  lift.h  lift_base.h  node.h  piecewise_linear_model.hpp  util.h
src/examples/: example_desto.cpp  example_destool.cpp  example_lial.cpp  example_liftol.cpp
